2007-03-16  Michael Natterer  <mitch@gimp.org>

	* plug-ins/script-fu/script-fu.c: remove N_() from calls to
	gimp_plugin_menu_register().

2007-03-16  Michael Natterer  <mitch@gimp.org>

	* plug-ins/script-fu/scripts/spyrogimp.scm: update the progress
	to avoid looking like the script hangs. Fixes bug #356677.

	* plug-ins/script-fu/script-fu-interface.c
	(script_fu_interface_report_cc): if the command starts with
	"gimp-progress-", the script is obviously showing a progress bar
	for itself, so clear the text instead of showing an endless number
	of "gimp-progress-update" messages. Also fixed manual main loop
	iteration.

2007-03-16  Michael Natterer  <mitch@gimp.org>

	Fix stuck progress bars (bug #393832):

	* app/plug-in/gimpplugin-progress.[ch] (gimp_plug_in_progress_end):
	added PlugInProcFrame parameter instead of blindly using the topmost
	in the procedure stack...

	* app/plug-in/gimppluginprocframe.c
	(gimp_plug_in_proc_frame_dispose): ...because we call it from here,
	when the proc_frame is already removed from the procedure stack.

	Unrelated:

	* plug-ins/script-fu/scripts/difference-clouds.scm: use
	RUN-INTERACTVE instead of 0, added (gimp-displays-flush)

	* plug-ins/common/snoise.c (solid_noide): update the progress to
	1.0 after rendering.

2007-03-15  Michael Natterer  <mitch@gimp.org>

	* data/brushes/Makefile.am: group files by type.

2007-03-15  Martin Nordholts  <martinn@svn.gnome.org>

	Converted .gbr to .vbr brushes where possible. Fixes bug #322176 and
	bug #157506.

	* data/brushes/Makefile.am: Changed .gbr for .vbr-counterparts for
	converted brushes.

	* data/brushes/*circle.gbr:
	* data/brushes/*fcircle.gbr:
	* data/brushes/DStar*.gbr:
	* data/brushes/callig*.gbr: Removed.

	* data/brushes/Circle-*.vbr:
	* data/brushes/Circle-Fuzzy-*.vbr:
	* data/brushes/Diagonal-Star-*.vbr:
	* data/brushes/Calligraphic-Brush-*.vbr: Added.

2007-03-15  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpaligntool.c
	* app/tools/gimpcolorpickertool.c